[package]
name = "kvp-network-bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
always-assert = "0.1"
async-trait = "0.1.57"
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
kvp-primitives = { path = "../../../primitives" }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
kvp-node-metrics = { path = "../../metrics"}
kvp-node-network-protocol = { path = "../protocol" }
kvp-node-subsystem = {path = "../../subsystem" }
kvp-overseer = { path = "../../overseer" }
parking_lot = "0.12.0"
bytes = "1"
fatality = "0.0.6"
thiserror = "1"

[dev-dependencies]
assert_matches = "1.4.0"
kvp-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
kvp-node-subsystem-util = { path = "../../subsystem-util"}
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures-timer = "3"
kvp-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
