[package]
name = "kvp-statement-distribution"
description = "Statement Distribution Subsystem"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
futures-timer = "3.0.2"
gum = { package = "tracing-gum", path = "../../gum" }
kvp-primitives = { path = "../../../primitives" }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
kvp-node-subsystem = {path = "../../subsystem" }
kvp-node-primitives = { path = "../../primitives" }
kvp-node-subsystem-util = { path = "../../subsystem-util" }
kvp-node-network-protocol = { path = "../../network/protocol" }
arrayvec = "0.7.4"
indexmap = "1.9.1"
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
fatality = "0.0.6"
bitvec = "1"

[dev-dependencies]
async-channel = "1.8.0"
assert_matches = "1.4.0"
kvp-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures-timer = "3.0.2"
kvp-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
rand_chacha = "0.3"
kvp-node-subsystem-types = { path = "../../subsystem-types" }
