[package]
name = "kvp-performance-test"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0.31"
quote = "1.0.28"
env_logger = "0.9"
log = "0.4"

kvp-node-core-pvf-prepare-worker = { path = "../../core/pvf/prepare-worker" }
kvp-erasure-coding = { path = "../../../erasure-coding" }
kvp-node-primitives = { path = "../../primitives" }
kvp-primitives = { path = "../../../primitives" }

sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech/substrate", branch = "master" }

kusama-runtime = { path = "../../../runtime/kusama" }

[[bin]]
name = "gen-ref-constants"
path = "src/gen_ref_constants.rs"

[features]
runtime-benchmarks = ["kusama-runtime/runtime-benchmarks"]
