[package]
name = "remote-ext-tests-bags-list"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kvp-runtime = { path = "../../../runtime/kvp" }
kusama-runtime = { path = "../../../runtime/kusama" }
westend-runtime = { path = "../../../runtime/westend" }
kvp-runtime-constants = { path = "../../../runtime/kvp/constants" }
kusama-runtime-constants = { path = "../../../runtime/kusama/constants" }
westend-runtime-constants = { path = "../../../runtime/westend/constants" }

pallet-bags-list-remote-tests = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }

clap = { version = "4.0.9", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.24.2", features = ["macros"] }
